// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`tracklist ADD_TRACKS handles default state 1`] = `[]`;

exports[`tracklist ADD_TRACKS handles empty tracklist 1`] = `
[
  {
    "addedBy": null,
    "album": {
      "name": "album1",
    },
    "artist": {
      "name": "artist1",
    },
    "metrics": null,
    "name": "track1",
    "uri": "t1",
  },
]
`;

exports[`tracklist ADD_TRACKS handles when some new tracks added 1`] = `
[
  {
    "addedBy": null,
    "album": {
      "name": "album2",
    },
    "artist": {
      "name": "artist2",
    },
    "metrics": null,
    "name": "track2",
    "uri": "t2",
  },
  {
    "addedBy": null,
    "artist": {
      "name": "artist3",
    },
    "composer": {
      "name": "composer3",
    },
    "metrics": null,
    "name": "track3",
    "uri": "t3",
  },
]
`;

exports[`tracklist ADD_TRACKS handles when some tracks removed 1`] = `
[
  {
    "addedBy": null,
    "album": {
      "name": "album2",
    },
    "artist": {
      "name": "artist2",
    },
    "metrics": null,
    "name": "track2",
    "uri": "t2",
  },
  {
    "addedBy": null,
    "artist": {
      "name": "artist3",
    },
    "composer": {
      "name": "composer3",
    },
    "metrics": null,
    "name": "track3",
    "uri": "t3",
  },
]
`;

exports[`tracklist SYNC_SOCIAL_DATA handles a change 1`] = `
[
  {
    "addedBy": "duncan",
    "album": {
      "name": "album2",
    },
    "artist": {
      "name": "artist2",
    },
    "metrics": "metrics",
    "name": "track2",
    "uri": "t2",
  },
  {
    "addedBy": null,
    "artist": {
      "name": "artist3",
    },
    "composer": {
      "name": "composer3",
    },
    "metrics": null,
    "name": "track3",
    "uri": "t3",
  },
]
`;

exports[`tracklist SYNC_SOCIAL_DATA handles no change 1`] = `
[
  {
    "addedBy": null,
    "album": {
      "name": "album1",
    },
    "artist": {
      "name": "artist1",
    },
    "metrics": null,
    "name": "track1",
    "uri": "t1",
  },
]
`;
